cmake_minimum_required(VERSION 3.15)
project(LeetCode_C C)

set(CMAKE_C_STANDARD 99)

add_executable(LeetCode_C main.c leetcode/x0000_two_sum.c src/sorting/merge_sort.c include/merge_sort.h leetcode/x0000_two_sum.h leetcode/x0001_add_two_num.c leetcode/x0001_add_two_num.h leetcode/x0002_longest_substring.c leetcode/x0002_longest_substring.h leetcode/x0003_find_median_two_arr.c leetcode/x0003_find_median_two_arr.h leetcode/x0004_palindromic_substring.c leetcode/x0004_palindromic_substring.h leetcode/x0005_zigzag.c leetcode/x0005_zigzag.h leetcode/x0007_str2int.c leetcode/x0007_str2int.h leetcode/x0009_expression_match.c leetcode/x0009_expression_match.h)